fix(stacked-series-chart): Show stack mode tooltip highlight + proper fix of console error on init.
fix(stacked-series-chart): Add task id to TODO & lint.

fix(stacked-series-chart): Fix formatting issue.

--- a/apps/dev/src/stacked-series-chart/stacked-series-chart-demo.component.html
+++ b/apps/dev/src/stacked-series-chart/stacked-series-chart-demo.component.html
@@ -89,6 +89,16 @@
       <dt-button-group-item value="node">Node</dt-button-group-item>
       <dt-button-group-item value="stack">Stack</dt-button-group-item>
     </dt-button-group>
+    <br />
+    <br />
+    <!-- TODO: APM-282124 Allow clearing the selection on stack mode from the outside -->
+    <button
+      dt-button
+      (click)="clearSelection()"
+      [disabled]="selectionMode === 'stack'"
+    >
+      Clear selection
+    </button>
 
     <pre>{{ selected | json }}</pre>
   </div>
