--- a/libs/barista-components/stacked-series-chart/src/stacked-series-chart-column.scss
+++ b/libs/barista-components/stacked-series-chart/src/stacked-series-chart-column.scss
@@ -86,6 +86,7 @@ See stacked-series-chart.layout.md
       left: -$selected-size;
       top: 0;
       bottom: 0;
+      pointer-events: none;
     }
   }
 }
