fix(breadcrumbs): Fixes an ExpressionChangedAfterChecked error on the breadcrumbs in non OnPush environments.

--- a/libs/barista-components/breadcrumbs/src/breadcrumbs.scss
+++ b/libs/barista-components/breadcrumbs/src/breadcrumbs.scss
@@ -138,7 +138,7 @@ $dt-breadcrumbs-panel-min-width: 112px !default;
     outline: none;
   }
 
-  &.dt-breadcrumbs-item-non-interactive {
+  &:not([href]) {
     color: $disabledcolor;
     background-color: inherit;
     cursor: default;
