fix(filter-field): Uses seperate disabled member, disabling the current tags' edit- and delete button in edit mode. This is visualized with a not-allowed cursor.

--- a/apps/dev/src/filter-field/filter-field-demo.component.html
+++ b/apps/dev/src/filter-field/filter-field-demo.component.html
@@ -34,6 +34,24 @@
     </button>
     <button
       dt-button
+      class="disable-tag-button"
+      variant="secondary"
+      [disabled]="!_firstTag"
+      (click)="toggledDisableEditableFirstTag()"
+    >
+      Toggle disabled editable on first tag
+    </button>
+    <button
+      dt-button
+      class="disable-tag-button"
+      variant="secondary"
+      [disabled]="!_firstTag"
+      (click)="toggledDisableDeletableFirstTag()"
+    >
+      Toggle disabled deletable on first tag
+    </button>
+    <button
+      dt-button
       (click)="setValues()"
       variant="secondary"
       [disabled]="!canSetValues"
